# fungiclef-2025

./: .gitignore  README.md  pyproject.toml  requirements.txt  workflow.md  workflow.txt
fungiclef/: cli.py  config.py  model_setup.py  serde.py
fungiclef/embed/: workflow.py
fungiclef/embedding/: embedding.py  generate_train_stratified.py  merge_embedding_with_metadata.py  pacmap.py  pacmap_plot.py  validate_embeddings.py
fungiclef/lightning/: data.py  model.py
fungiclef/multimodal/: __init__.py  classifier.py  datamodule.py  predict.py  train.py
fungiclef/multimodalmultiobjective/: classifier.py  classifier_v1.py  classifier_v4.py  datamodule.py  predict.py  train.py
fungiclef/prediction/: __init__.py  predict.py  test.py  train.py
fungiclef/preprocessing/: __init__.py  augment.py  class_mapping.py  embedding.py  fix_end_of_file.py  pacmap_plot.py  serialize.py  transform.py  validate_embeddings.py
fungiclef/torch/: data.py  embedding_old.py  generate_stratified.py  merge_embedding_with_metadata.py  mixup.py  model.py  pacmap_plot.py  validate_embeddings.py
genai/: README.md  pyproject.toml
genai/genai/: collate.py  query.py
genai/notebooks/: 00-basic-stats.ipynb  01-basic-prompting.ipynb  02-development.ipynb
notebooks/colab/: 20250505-mg-dinov2-plant-model.ipynb  20250505-mg-download-data.ipynb  20250505-mg-embed-pipeline.ipynb  20250506-mg-image-to-parquet.ipynb  20250507-mg-download-model.ipynb  20250507-mg-model-setup.ipynb  20250508-mg-subset-data.ipynb
notebooks/eda/: 00-initial-exploration.ipynb  20250509-mg-subset-data-pace.ipynb  20250510-mg-pacmap-clustering.ipynb  20250511-mg-captions.ipynb  20250512-mg-pacmap-text-embed.ipynb
notebooks/embed/: 20250509-mg-embed-pipeline.ipynb  20250511-mg-bert-text.ipynb  20250511-mg-text-embed.ipynb
scripts/utils/: generate_train_stratified.py  slurm-venv.sh
tests/: conftest.py
tests/embed/: test_embed.py
user/jtam30/: README.md
user/mgustineli/: ondemand-augment.sh  ondemand-embed.sh  ondemand-predict-multimodal.sh  ondemand-predict.sh  ondemand-train-classifier.sh  ondemand-train-multimodal-cls.sh
user/mgustineli/logs/fungi-classifier/version_0/: events.out.tfevents.1746914722.atl1-1-03-004-33-0.pace.gatech.edu.1883987.0  events.out.tfevents.1746915446.atl1-1-03-004-33-0.pace.gatech.edu.1973401.0
user/mgustineli/logs/fungi-classifier/version_1/: events.out.tfevents.1746919331.atl1-1-03-004-33-0.pace.gatech.edu.2006959.0
user/mgustineli/logs/fungi-classifier/version_10/: events.out.tfevents.1746942349.atl1-1-03-004-33-0.pace.gatech.edu.2220135.0
user/mgustineli/logs/fungi-classifier/version_11/: events.out.tfevents.1746996182.atl1-1-02-005-31-0.pace.gatech.edu.2514615.0
user/tamncheese/: README.md  generate_train_metadata.py  generate_train_metadata_laptop_old.py  generate_trial_stratified_trial.py  ondemand-predict-multimodal.sh  ondemand-predict.sh  ondemand-train-classifier.sh  ondemand-train-multimodal-cls.sh  training.csv  vit_testing.ipynb
user/tamncheese/eda/: class_analyzer.py  genus_species_count.py  stdout.txt  view_augmented_images.py
user/tamncheese/model/: logistic_regression.py  multi_target_loss.py
user/tamncheese/preprocessing/: check_images.py  embeddings.py  image_to_parquet.py
(+18 files in other folders)
